# retail-agent

./: .gitignore  README.md  pyproject.toml  run.py
retail/: agents.py  collection.py  database.py
sql/: create-tables.sql  data.sql
