[tool.poetry]
name = "retail"
version = "0.1.0"
description = ""
authors = ["Craig Lenzen <lenzenc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
questionary = "^2.0.1"
swarm = {git = "https://github.com/openai/swarm.git"}
python-dotenv = "^1.0.1"
chromadb = "^0.5.15"
langchain = "^0.3.3"
langchain-ollama = "^0.2.0"
langchain-community = "^0.3.2"
pypdf = "^5.0.1"
langchain-chroma = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
